fixed the z-index issue with the video and nav bar

--- a/jekyll/_sass/3-layouts/lesson.sass
+++ b/jekyll/_sass/3-layouts/lesson.sass
@@ -83,6 +83,7 @@
       font-size: 0.8em
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2)
       position: fixed
+      z-index: 1
       top: 0
       left: 220px
       width: 100%
@@ -139,6 +140,9 @@
           background: black
           display: block
           margin: 1em auto
+
+          videogular
+            z-index: 0
 
       .bottom-container
         margin-bottom: 3em
